fix: update scrollbar-gutter style to prevent layout shifts in non-collapsed sidebar

--- a/src/assets/css/MainContainer.scss
+++ b/src/assets/css/MainContainer.scss
@@ -13,7 +13,11 @@
 }
 
 html {
-  // scrollbar-gutter: stable;
+
+  // Make sure the scrollbar keep its space when it appears, to prevent layout shifts - Only on non-collapsed sidebar
+  :is([data-slot="sidebar"]):not([data-state="collapsed"]) [data-slot="sidebar-content"] {
+    scrollbar-gutter: stable;
+  }
 }
 
 body {
